11-persistent-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pvc-demo-nextcloud
spec:
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: nextcloud:20.0.0-apache
          ports:
            - containerPort: 80
              name: http
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 500Mi
          volumeMounts:
            - mountPath: /var/www/html/
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: nextcloud-data
