11-persistent-volumes/service-without.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-no-pvc
  namespace: codeweek
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: nextcloud-no-pvc
  type: ClusterIP
