11-persistent-volumes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: codeweek
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: nextcloud
  type: ClusterIP
