11-persistent-volumes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-example
  namespace: codeweek
spec:
  rules:
    - host: cloud.193.148.163.39.xip.io
      http:
        paths:
          - backend:
              service:
                name: nextcloud
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: cloud-no-pvc.193.148.163.39.xip.io
      http:
        paths:
          - backend:
              service:
                name: nextcloud-no-pvc
                port:
                  name: http
            pathType: Prefix
            path: /
